[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
actix-web = "4.5.1"
config = "0.14.0"
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-macros = { version = "2.2.0" }
uuid = { version = "1", features = ["v4"] }
env_logger = "0.11.2"
log = "0.4.20"

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]

[dev-dependencies]
reqwest = "0.11"
